# esp32p4_3point4inch

./: CMakeLists.txt  README.md  myflash.sh  partitions.csv  sdkconfig  sdkconfig.old
components/lvgl__lvgl/: lv_conf_template.h
components/lvgl__lvgl/env_support/cmake/: esp.cmake
main/: CMakeLists.txt  dashboard_bg.h  esp32p4_3point4inch.cpp  idf_component.yml
main/applications/dashboard/: dashboard_controller.cpp  dashboard_controller.h  dashboard_model.cpp  dashboard_model.h  dashboard_view.cpp  dashboard_view.h
main/applications/dashboard/assets/: dashboard_bg.c  rot_000.c  rot_007.c  rot_015.c  rot_023.c  rot_030.c  rot_037.c  rot_045.c  rot_053.c  rot_060.c  rot_067.c  rot_075.c  rot_083.c  rot_090.c  rot_097.c  rot_105.c  rot_113.c  rot_120.c  rot_127.c  rot_135.c  rot_143.c  rot_150.c  rot_157.c  rot_165.c  rot_173.c  rot_180.c  rot_187.c  rot_195.c  rot_203.c  rot_210.c  rot_217.c  rot_225.c  rot_233.c  rot_240.c  speed.txt  ui_font_speedFont.c
main/drivers/: drivers.h
main/drivers/lcd/: jd9365.cpp  jd9365.h
main/drivers/sdmmc/: sdmmc.cpp  sdmmc.h
main/drivers/spiffs/: spiffs.cpp  spiffs.h
